# AI-Video-Search-Engine

./: .gitignore  README.md
backend/: pyproject.toml  startup.txt  tmp_output.txt
backend/app/: configs.py  main.py  tasks.py  transcribe.py  utils.py
